# chatapp_rust

./: Cargo.toml
src/client/: app.rs  connection.rs  main.rs
src/server/: handler.rs  main.rs
